--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 			<version>2.30.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.9.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
