--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ doma.batch-size=0
 # Type of SQL log in the exception. (RAW, FORMATTED, NONE)
 doma.exception-sql-log-type=FORMATTED
 
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/TempleTaskManager
 spring.datasource.username=root
 spring.datasource.password=wind3576
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
