TempleControllerTestクラスの作成

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Junit5 -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- webjars:JQuery -->
 		<dependency>
 			<groupId>org.webjars</groupId>
