--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -2,5 +2,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.schema=classpath:schema.sql
+spring.datasource.schema=classpath:templeSchema.sql
 spring.datasource.data=classpath:data.sql
