--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
   test:
     docker:
       - image: circleci/openjdk:11-jdk-buster-browsers
+      - image: circleci/mysql:5.7.29
+        environment:
+          MYSQL_DATABASE: 'TestTempleTaskManager'
+          MYSQL_USER: 'root'
+          MYSQL_ROOT_PASSWORD: 'wind3576'
+    
     steps:
       - checkout
       - attach_workspace:
