--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,41 +26,15 @@ jobs:
       - persist_to_workspace:
           root: .
           paths: .
-
-      docker:
-          # すべてのコマンドを実行する場所となるプライマリ コンテナ イメージ
-          # 上のイメージとは別に必要？　だとした何？
-        - image: 
-          environment:
-          TEST_DATABASE_URL: 
-        # サービスコンテナイメージ
-        - image: buildo/h2database
-          environment:
-          - H2DB_ROOT_PASSWORD=
-          - H2DB_DATABASE=
-          - H2DB_USER=
-          - H2DB_PASSWORD=
-      steps:
-        - checkout
-        - run:
-            name: install dependecies
-            command: composer install 
-        - run:
-            name: install dockerize
-            command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-            environment:
-              DOCKERIZE_VERSION: v0.3.0
-        - run:
-            name: Wait for db
-            command: dockerize -wait  http://localhost:8082/  -timeout 1m
-        - run:
-            name: Test
-            command: ./mvnw test
-
-
+          
   test:
     docker:
       - image: circleci/openjdk:11-jdk-buster-browsers
+      - image: circleci/mysql:5.7.29
+        environment:
+          MYSQL_DATABASE: 'TestTempleTaskManager'
+          MYSQL_USER: 'root'
+          MYSQL_ROOT_PASSWORD: 'wind3576'
     steps:
       - checkout
       - attach_workspace:
