--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,12 +33,12 @@ jobs:
     # ToDoここのバージョンとか間違ってないか確認 →済
       - image: openkbs/jdk11-mvn-py3
       - image: circleci/mysql:5.7.29
-      # パスワード記述しない方法がある
       
         environment:
+        # passwordを記述しなくても大丈夫な設定
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: 'TestTempleTaskManager'
-          MYSQL_USER: 'root'
+          # MYSQL_USER: 'root'
           MYSQL_ROOT_PASSWORD: ''
     steps:
     #  - persist_to_workspace:
