--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
     # ToDoここのバージョンとか間違ってないか確認 →済
       - image: openkbs/jdk11-mvn-py3
       - image: circleci/mysql:5.7.29
+      - image: flyway/flyway
       
         environment:
         # passwordを記述しなくても大丈夫な設定
@@ -44,7 +45,7 @@ jobs:
     #  - persist_to_workspace:
           # root: .
           # paths: .
-          # ここに入ってテストを実行する
+          # ↑ここに入ってテストを実行する checkou以降
       - checkout
       - attach_workspace:
           at: .
