--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
           at: .
       - run: 
           name: flyway install
-          command:  mvn flyway:migrate -Dflyway.url=dbc:mysql://localhost:3306/TestTempleTaskManager -Dflyway.user=root -Dflyway.password=wind3576
+          command:  flyway migrate -url=dbc:mysql://localhost:3306/TestTempleTaskManager -user=root -password=wind3576
       - run:
           name: unit test
           command: ./mvnw test
