--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,60 +1,9 @@
 version: 2.1
-jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:11-jdk-buster-browsers
-    steps:
-      - checkout
-      - restore_cache:
-          key: maven-v1-{{ checksum "pom.xml" }}
-      - run:
-          name: ./mvnw install
-          command: ./mvnw install
-      - save_cache:
-          key: maven-v1-{{ checksum "pom.xml" }}
-          paths: ~/.m2
-      - persist_to_workspace:
-          root: .
-          paths: .
 
-  test:
-    docker:
-      - image: circleci/openjdk:11-jdk-buster-browsers
-      - image: circleci/mysql:5.7.29
-        environment:
-          MYSQL_DATABASE: 'TestTempleTaskManager'
-          MYSQL_USER: 'root'
-          MYSQL_ROOT_PASSWORD: 'wind3576'
-    
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run:
-          name: unit test
-          command: ./mvnw test
-
-  deploy:
-    docker:
-      - image: buildpack-deps:trusty
-    steps:
-      - checkout
-      - run:
-          name: deploy to heroku
-          command: |
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+orbs:
+  maven: circleci/maven@0.0.12
 
 workflows:
-  version: 2.1
-  build_and_test:
+  maven_test:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
-      - deploy:
-          requires:
-            - test
-          filters:
-            branches:
-              only: master
+      - maven/test # checkout, build, test, and upload test results
