--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,10 @@ jobs:
     steps:
     # CI環境上のworking_directryにgitリポジトリをコピーする
       - checkout
+      # sshの接続設定
       - add_ssh_keys:
           fingerprints: 
-            - "0e:65:fd:6e:07:a1:8d:ec:3f:e5:9f:5b:4f:ad:3a:25"
-
-
+            - "09:01:47:8a:a1:97:76:fc:70:ab:55:95:30:69:06:1b"
       # キャッシュがsave_cacheされていればリストア（バックアップを適用）する
       - restore_cache:
           # リストアするキャッシュを指定（keyを指定してデータを保存）keyの中身がよく分からない
