--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ doma.max-rows=0
 doma.query-timeout=0
 # Hint to the number of rows that should be fetched. Ignored unless this value is greater than 0.
 doma.fetch-size=0
-# Size in executing PreparedStatement#addBatch(). Regarded as 1 unless this value is greater than 1.
+# Size in executing PreparedStatement#addBatch(). Regarded as 1 unless this value is greater than 1
 doma.batch-size=0
 # Type of SQL log in the exception. (RAW, FORMATTED, NONE)
 doma.exception-sql-log-type=FORMATTED
