--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ doma.exception-translation-enabled=true
 doma.max-rows=0
 # Number of seconds the driver will wait for a Statement object to execute. Ignored unless this value is greater than 0.
 doma.query-timeout=0
-# Hint to the number of rows that should be fetched. Ignored unless this value is greater than 0.
+# Hint to the number of rows that should be fetched. Ignored unless this value is greater than 0
 doma.fetch-size=0
 # Size in executing PreparedStatement#addBatch(). Regarded as 1 unless this value is greater than 1
 doma.batch-size=0
