--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ doma.naming=NONE
 doma.exception-translation-enabled=true
 # Limit for the maximum number of rows. Ignored unless this value is greater than 0.
 doma.max-rows=0
-# Number of seconds the driver will wait for a Statement object to execute. Ignored unless this value is greater than 0.
+# Number of seconds the driver will wait for a Statement object to execute. Ignored unless this value is greater than 0
 doma.query-timeout=0
 # Hint to the number of rows that should be fetched. Ignored unless this value is greater than 0
 doma.fetch-size=0
