--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ doma.sql-file-repository=NO_CACHE
 doma.naming=NONE
 # Whether convert JdbcException into DataAccessException
 doma.exception-translation-enabled=true
-# Limit for the maximum number of rows. Ignored unless this value is greater than 0.
+# Limit for the maximum number of rows. Ignored unless this value is greater than 0
 doma.max-rows=0
 # Number of seconds the driver will wait for a Statement object to execute. Ignored unless this value is greater than 0
 doma.query-timeout=0
