--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,17 +41,17 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run:
-          name: Setup dockerize
-          command: bash .circleci/setup-dockerize.sh
-      - run:
-          name: Run Docker containers
-          command: yarn build && docker-compose up -d
-      #  - run:
-      #      name: install dockerize
-      #      command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-      #      environment:
-      #        DOCKERIZE_VERSION: v0.3.0
+      # - run:
+      #     name: Setup dockerize
+      #     command: bash .circleci/setup-dockerize.sh
+      # - run:
+      #     name: Run Docker containers
+      #     command: yarn build && docker-compose up -d
+       - run:
+           name: install dockerize
+           command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz &&  tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+           environment:
+             DOCKERIZE_VERSION: v0.3.0
       - run:
            name: Wait for db
            command: dockerize -wait tcp://localhost:3306 -timeout 1m
