--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Dialect of database used by Doma. (STANDARD, SQLITE, DB2, MSSQL, MYSQL, POSTGRES, ORACLE, H2, HSQL
 doma.dialect=MYSQL
-# Type of SqlFileRepository. (GREEDY_CACHE, NO_CACHE)
+# Type of SqlFileRepository. (GREEDY_CACHE, NO_CACHE
 doma.sql-file-repository=NO_CACHE
 # Type of Naming (NONE, LOWER_CASE, UPPER_CASE, SNAKE_LOWER_CASE, SNAKE_UPPER_CASE, LENIENT_SNAKE_LOWER_CASE, LENIENT_SNAKE_UPPER_CASE, DEFAULT)
 doma.naming=NONE
