--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: 'TestTempleTaskManager'
           MYSQL_ROOT_PASSWORD: ''
-          command: [--character-set-server=utf8, --collation-server=utf8_general_ci, --default-storage-engine=innodb]
+
     steps:
       - attach_workspace:
           at: .
@@ -48,8 +48,18 @@ jobs:
            environment:
              DOCKERIZE_VERSION: v0.3.0
       - run:
-           name: Wait for db to be ready
+           name: Waiting for db to be ready
            command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      - run:
+          name: Install MySQL CLI; Create table;
+          command: sudo apt-get install default-mysql-client && mysql -h 127.0.0.1 -uroot test < schema.sql
+      # - restore_cache:
+      #     key: circleci-test-{{ checksum "pom.xml" }}
+      # - run: mvn dependency:go-offline
+      # - save_cache:
+      #     paths:
+      #       - ~/.m2
+      #     key: circleci-test-{{ checksum "pom.xml" }}    
       - run:
           name: unit test
           command: ./mvnw test
