--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,11 +55,11 @@ jobs:
           # command: sudo apt-get install default-mysql-client && mysql -h 127.0.0.1 -uroot test < schema.sql
       - restore_cache:
           key: circleci-test-{{ checksum "pom.xml" }}
-      # - run: mvn dependency:go-offline
-      # - save_cache:
-      #     paths:
-      #       - ~/.m2
-      #     key: circleci-test-{{ checksum "pom.xml" }}    
+      - run: mvn dependency:go-offline
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: circleci-test-{{ checksum "pom.xml" }}    
       - run:
           name: unit test
           command: ./mvnw test
