--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/TestTempleTaskManager
-spring.datasource.username=user
-spring.datasource.password=noda
+spring.datasource.username=root
+spring.datasource.password=wind3576
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
