--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 doma.dialect=MYSQL
 # Type of SqlFileRepository. (GREEDY_CACHE, NO_CACHE
 doma.sql-file-repository=NO_CACHE
-# Type of Naming (NONE, LOWER_CASE, UPPER_CASE, SNAKE_LOWER_CASE, SNAKE_UPPER_CASE, LENIENT_SNAKE_LOWER_CASE, LENIENT_SNAKE_UPPER_CASE, DEFAULT)
+# Type of Naming (NONE, LOWER_CASE, UPPER_CASE, SNAKE_LOWER_CASE, SNAKE_UPPER_CASE, LENIENT_SNAKE_LOWER_CASE, LENIENT_SNAKE_UPPER_CASE, DEFAULT
 doma.naming=NONE
 # Whether convert JdbcException into DataAccessException
 doma.exception-translation-enabled=true
