--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - image: circleci/mysql:5.7.29
         environment:
           MYSQL_DATABASE: 'TestTempleTaskManager'
-          MYSQL_USER: root
+          MYSQL_USER: user
           MYSQL_PASSWORD: wind3576
           MYSQL_HOST: 127.0.0.1
           
